--- a/ka-event-spring/pom.xml
+++ b/ka-event-spring/pom.xml
@@ -1,109 +1,98 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  	<parent>
-  	<artifactId>base</artifactId>
-  	<groupId>se.istools</groupId>
-  	<version>2.0.0-SNAPSHOT</version>
-  	<relativePath>../pom.xml</relativePath>
-  </parent>
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.kasource</groupId>
-  <artifactId>ka-event-spring</artifactId>
-  <packaging>jar</packaging>
-  <name>Ka Event Sping</name>
-  <version>SNAPSHOT</version>
-  <url>http://kasource.org</url>
-   <!-- Build properties -->
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<parent>
+		<artifactId>ka-event-base</artifactId>
+		<groupId>org.kasource</groupId>
+		<version>SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.kasource</groupId>
+	<artifactId>ka-event-spring</artifactId>
+	<packaging>jar</packaging>
+	<name>Ka Event Spring</name>
+	<version>SNAPSHOT</version>
+	<url>http://kasource.org</url>
+	<!-- Build properties -->
 	<properties>
 		<spring.version>2.5.6</spring.version>
 	</properties>
-  <build>
- 	<plugins>
- 		<plugin>
-   			<groupId>org.apache.maven.plugins</groupId>
-   			<artifactId>maven-compiler-plugin</artifactId>
-   			<configuration>
-   				<source>1.6</source>
-        		<target>1.6</target>
-   			</configuration>
-  		</plugin>
-  		<plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-eclipse-plugin</artifactId>
-            <version>2.5.1</version>
-         </plugin>
-         <plugin>
+	<build>
+		<plugins>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
+				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-				<forkMode>always</forkMode>
-					<argLine>-javaagent:"${settings.localRepository}/org/springframework/spring-agent/${spring.version}/spring-agent-${spring.version}.jar" -server -Xmx1024m</argLine>					
-                    <useSystemClassloader>true</useSystemClassloader>
-                    <useManifestOnlyJar>false</useManifestOnlyJar>
-                    <testFailureIgnore>false</testFailureIgnore>
-                    <includes>
-                        <include>**/*Test.java</include>
-                    </includes>
+					<source>1.6</source>
+					<target>1.6</target>
 				</configuration>
 			</plugin>
-		  <plugin>
-      			<artifactId>maven-assembly-plugin</artifactId>
-        		<configuration>
-          			<descriptorRefs>
-            			<descriptorRef>jar-with-dependencies</descriptorRef>
-          			</descriptorRefs>
-        		</configuration>
-      	</plugin>
- 	</plugins>
-  </build>
- 
-  <dependencies>
-    <dependency>
-    <groupId>junit</groupId>
-    <artifactId>junit</artifactId>
-    <version>4.4</version>
-</dependency> 
-<dependency>
-	<groupId>org.kasource</groupId>
-	<artifactId>ka-event-core</artifactId>
-	<version>SNAPSHOT</version>
-</dependency>
-    <dependency>
-    <groupId>org.springframework</groupId>
-    <artifactId>spring</artifactId>
-    <version>${spring.version}</version>
-</dependency>
-<dependency>
-    <groupId>org.springframework</groupId>
-    <artifactId>spring-test</artifactId>
-    <version>${spring.version}</version>
-    <scope>test</scope>
-</dependency>
+			
+			
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
-<dependency>
-	<groupId>org.springframework</groupId>
-	<artifactId>spring-aspects</artifactId>
-	<version>${spring.version}</version>
-</dependency> 
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.4</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.kasource</groupId>
+			<artifactId>ka-event-core</artifactId>
+			<version>SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kasource</groupId>
+			<artifactId>ka-event-core</artifactId>
+			<version>SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
+			<scope>test</scope>
+		</dependency>
 
-<dependency>
-    <groupId>org.springframework</groupId>
-    <artifactId>spring-agent</artifactId>
-    <version>${spring.version}</version>
-    <scope>test</scope>
-</dependency>  
-<dependency>
-	<groupId>org.springframework.integration</groupId>
-	<artifactId>spring-integration-core</artifactId>
-	<version>1.0.3.RELEASE</version>
-</dependency>
-	<dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aspects</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-agent</artifactId>
+			<version>${spring.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-core</artifactId>
+			<version>1.0.3.RELEASE</version>
+		</dependency>
+		<dependency>
 			<groupId>org.easymock</groupId>
 			<artifactId>easymock</artifactId>
 			<version>2.5.1</version>
 			<scope>test</scope>
 		</dependency>
-<dependency>
+		<dependency>
 			<groupId>org.unitils</groupId>
 			<artifactId>unitils-core</artifactId>
 			<version>${unitils.version}</version>
@@ -133,34 +122,34 @@
 			<version>${unitils.version}</version>
 			<scope>test</scope>
 		</dependency>
-<dependency>
-    <groupId>net.sf.scannotation</groupId>
-    <artifactId>scannotation</artifactId>
-    <version>1.0.2</version>
-</dependency> 
-<dependency>
+		<dependency>
+			<groupId>net.sf.scannotation</groupId>
+			<artifactId>scannotation</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.15</version>
 		</dependency>
-  </dependencies>
-  <reporting>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.6</version>
-         
-        <configuration>    
-          <excludePackageNames>com.kenai.elf4soi.example.*</excludePackageNames>
-          <detectLinks>true</detectLinks>
-          <links>
-                <link>http://java.sun.com/javase/6/docs/api/</link>
-        	</links>
-        </configuration>
-        
-      </plugin>
-    </plugins>
-  </reporting>
-  
+	</dependencies>
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.6</version>
+
+				<configuration>
+					<excludePackageNames>com.kenai.elf4soi.example.*</excludePackageNames>
+					<detectLinks>true</detectLinks>
+					<links>
+						<link>http://java.sun.com/javase/6/docs/api/</link>
+					</links>
+				</configuration>
+
+			</plugin>
+		</plugins>
+	</reporting>
+
 </project>
