--- a/ka-commons/pom.xml
+++ b/ka-commons/pom.xml
@@ -49,6 +49,12 @@
 			<artifactId>unitils-test</artifactId>
 			<version>${unitils.version}</version>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>javax.transaction</groupId>
+    				<artifactId>jta</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.unitils</groupId>
