--- a/ka-event-osgi/pom.xml
+++ b/ka-event-osgi/pom.xml
@@ -12,9 +12,21 @@
 	<artifactId>ka-event-osgi</artifactId>
 	<packaging>bundle</packaging>
 	<version>SNAPSHOT</version>
-	<name>Ka Event OSGI Bundle</name>
+	<name>Ka Event OSGi Bundle</name>
 	<url>http://kasource.org</url>
 
+	<repositories>
+		<repository>  
+			<id>com.springsource.repository.bundles.release</id>  
+			<name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>  
+			<url>http://repository.springsource.com/maven/bundles/release</url> 
+			</repository> 
+		<repository>  
+			<id>com.springsource.repository.bundles.external</id>  
+			<name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>  
+			<url>http://repository.springsource.com/maven/bundles/external</url> 
+		</repository> 
+	</repositories>
 	<build>
 		<plugins>
 			<plugin>
@@ -23,9 +35,50 @@
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
-						<Export-Package></Export-Package>
-						<Private-Package>
-						
+					  	<Import-Bundle>
+							com.springsource.org.apache.log4j;version="[1.2.16,1.2.16]"
+						</Import-Bundle> 
+						<Import-Package>
+							org.apache.log4j,
+							org.osgi.framework,
+							org.osgi.service.packageadmin,
+							javax.security.auth.x500,
+							javax.annotation,
+							javax.xml.bind, 
+							javax.xml.bind.annotation, 
+							javax.xml.bind.annotation.adapters
+							</Import-Package>
+						<Export-Package>org.kasource.kaevent.event</Export-Package>
+						<Private-Package>	
+						    org.scannotation,
+						    org.scannotation.archiveiterator,
+						    javassist, 
+						    javassist.bytecode.stackmap,
+						    javassist.bytecode, 
+						    javassist.bytecode.annotation,  
+						    javassist.compiler, 
+						    javassist.compiler.ast, 
+						    javassist.convert, 
+						    javassist.expr, 
+						    javax.servlet,
+						    org.kasource.kaevent.bean,
+						    org.kasource.kaevent.channel,
+						    org.kasource.kaevent.config,
+						    org.kasource.kaevent.event, 
+							org.kasource.kaevent.event.method, 
+							org.kasource.kaevent.event.config,
+							org.kasource.kaevent.event.dispatch, 
+							org.kasource.kaevent.event.register,
+							org.kasource.kaevent.event.filter,
+							org.kasource.kaevent.event.export, 
+							org.kasource.kaevent.event.method.switchcase, 
+						    org.kasource.kaevent.listener.interfaces, 
+						    org.kasource.kaevent.listener.register,	
+						    org.kasource.kaevent.listener.implementations,				
+							org.kasource.kaevent.osgi,
+							org.kasource.commons.osgi,
+							org.kasource.commons.reflection,
+							org.kasource.commons.util								
 						</Private-Package>
 						<Bundle-Activator>org.kasource.kaevent.osgi.Activator</Bundle-Activator>
 						<Bundle-SymbolicName>${pom.artifactId}</Bundle-SymbolicName>
@@ -74,6 +127,11 @@
 			<artifactId>ka-event-core</artifactId>
 			<version>SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.kasource</groupId>
+			<artifactId>ka-commons</artifactId>
+			<version>SNAPSHOT</version>
+		</dependency>	
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
@@ -126,7 +184,11 @@
 			<artifactId>org.osgi.compendium</artifactId>
 			<version>1.4.0</version>
 		</dependency>
-
+		<dependency>  
+			<groupId>org.apache.log4j</groupId>  
+			<artifactId>com.springsource.org.apache.log4j</artifactId>  
+			<version>1.2.16</version> 
+		</dependency>
 	</dependencies>
 	<reporting>
 		<plugins>
