--- a/ka-event-core/pom.xml
+++ b/ka-event-core/pom.xml
@@ -161,7 +161,7 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.15</version>
+			<version>${log4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.unitils</groupId>
