--- a/ka-event-osgi/pom.xml
+++ b/ka-event-osgi/pom.xml
@@ -133,11 +133,6 @@
 			<version>SNAPSHOT</version>
 		</dependency>	
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.15</version>
-		</dependency>
-		<dependency>
 			<groupId>org.easymock</groupId>
 			<artifactId>easymock</artifactId>
 			<version>2.5.1</version>
@@ -187,7 +182,7 @@
 		<dependency>  
 			<groupId>org.apache.log4j</groupId>  
 			<artifactId>com.springsource.org.apache.log4j</artifactId>  
-			<version>1.2.16</version> 
+			<version>${log4j.version}</version>
 		</dependency>
 	</dependencies>
 	<reporting>
