--- a/ka-event-spring/pom.xml
+++ b/ka-event-spring/pom.xml
@@ -191,7 +191,7 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.15</version>
+			<version>${log4j.version}</version>
 		</dependency>
 	</dependencies>
 	<reporting>
