--- a/ka-event-core/pom.xml
+++ b/ka-event-core/pom.xml
@@ -137,7 +137,7 @@
 		<dependency>
 			<groupId>org.kasource</groupId>
 			<artifactId>ka-commons</artifactId>
-			<version>${version}</version>
+			<version>${project.version}</version>
 		</dependency>	
 		<dependency>
 			<groupId>org.easymock</groupId>
