--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>ka-event-base</artifactId>
 	<packaging>pom</packaging>
 	<name>Base Project</name>
-	<version>SNAPSHOT</version>
+	<version>0.5-SNAPSHOT</version>
 	<properties>
 		<spring.version>2.5.6</spring.version>
 		<unitils.version>3.1</unitils.version>
@@ -41,7 +41,11 @@
 						<addVersionToProjectName>true</addVersionToProjectName>
 					</configuration>
 				</plugin>
-			
+			    <plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.9</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins>
