--- a/ka-spring/pom.xml
+++ b/ka-spring/pom.xml
@@ -2,13 +2,13 @@
 	<parent>
   	<artifactId>ka-event-base</artifactId>
   	<groupId>org.kasource</groupId>
-  	<version>0.5</version>
+  	<version>0.5-SNAPSHOT</version>
   	<relativePath>../pom.xml</relativePath>
     </parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.kasource</groupId>
 	<artifactId>ka-spring</artifactId>
-	<version>0.5</version>
+	<version>0.5-SNAPSHOT</version>
 	<name>Ka Spring</name>
 	<description>Spring utilities for version 2.5.x</description>
 	<url>http://kasource.org</url>
