--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<artifactId>ka-event-base</artifactId>
 	<packaging>pom</packaging>
 	<name>Ka-Event Base Project</name>
-	<version>0.5-SNAPSHOT</version>
+	<version>0.5</version>
 	<description>
 		Ka-Event base project, which builds all modules.
 	</description>
@@ -23,9 +23,9 @@
   	</licenses>
 	<scm>
 		<tag>scm:svn:https://svn.kenai.com/svn/ka-event~src/trunk</tag>
-		<url>scm:svn:https://svn.kenai.com/svn/ka-event~src/trunk</url>
-    	<developerConnection>scm:svn:https://svn.kenai.com/svn/ka-event~src/trunk</developerConnection>
-    	<connection>scm:svn:https://svn.kenai.com/svn/ka-event~src/trunk</connection>
+		<url>scm:svn:https://svn.kenai.com/svn/ka-event~src/tags/ka-event-base-0.5</url>
+    	<developerConnection>scm:svn:https://svn.kenai.com/svn/ka-event~src/tags/ka-event-base-0.5</developerConnection>
+    	<connection>scm:svn:https://svn.kenai.com/svn/ka-event~src/tags/ka-event-base-0.5</connection>
   	</scm>
 	<issueManagement>
 		<system>JIRA</system>
