--- a/ka-event-core/pom.xml
+++ b/ka-event-core/pom.xml
@@ -115,16 +115,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.6</version>
-
 				<configuration>
-					<excludePackageNames>com.kenai.sadelf.example.*:com.kenai.sadelf.xa</excludePackageNames>
-					<detectLinks>true</detectLinks>
-					<links>
-						<link>http://java.sun.com/javase/6/docs/api/</link>
-					</links>
+					<excludePackageNames>org.kasource.kaevent.example.*</excludePackageNames>
 				</configuration>
-
 			</plugin>
 		</plugins>
 	</reporting>
