--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,20 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.9</version>
 				</plugin>
+				<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<detectLinks>true</detectLinks>
+					<links>
+						<link>http://java.sun.com/javase/6/docs/api/</link>
+						<link>http://static.springsource.org/spring/docs/2.5.x/api/</link>
+					</links>
+					<excludePackageNames>org.kasource.kaevent.example.*</excludePackageNames>
+				</configuration>
+
+			</plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins>
