--- a/ka-event-guice/pom.xml
+++ b/ka-event-guice/pom.xml
@@ -97,6 +97,11 @@
 			<version>${project.version}</version> 
 		</dependency>	
 		<dependency>
+			<groupId>org.kasource</groupId>
+			<artifactId>ka-event-aspects</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 		</dependency>	
