--- a/ka-event-aspects/pom.xml
+++ b/ka-event-aspects/pom.xml
@@ -2,11 +2,11 @@
 	<parent>
   	<artifactId>ka-event-base</artifactId>
   	<groupId>org.kasource</groupId>
-  	<version>0.6-SNAPSHOT</version>
+  	<version>0.6</version>
   	<relativePath>../pom.xml</relativePath>
     </parent>
 	<modelVersion>4.0.0</modelVersion>
-	<version>0.6-SNAPSHOT</version>
+	<version>0.6</version>
 	<groupId>org.kasource</groupId>
 	<artifactId>ka-event-aspects</artifactId>
 	<packaging>jar</packaging>
