--- a/ka-event-spring/pom.xml
+++ b/ka-event-spring/pom.xml
@@ -14,7 +14,7 @@
 	<url>http://kasource.org</url>
 	<!-- Build properties -->
 	<properties>
-		<spring.version>2.5.6</spring.version>
+		<spring.version>[2.5,2.5.6],[2.5.6.SEC01,2.5.6.SEC02]</spring.version>
 	</properties>
 	<build>
 	<resources>
@@ -99,11 +99,6 @@
 		<dependency>
 			<groupId>org.kasource</groupId>
 			<artifactId>ka-event-core</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kasource</groupId>
-			<artifactId>ka-event-aspects</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
