--- a/ka-spring/pom.xml
+++ b/ka-spring/pom.xml
@@ -14,7 +14,7 @@
 	<url>http://kasource.org</url>
 	<properties>
 		<unitils.version>3.1</unitils.version>
-		<spring.version>2.5.6</spring.version>
+		<spring.version>[2.5,2.5.6],[2.5.6.SEC01,2.5.6.SEC02]</spring.version>
 	</properties>
 	<build>
 		<plugins>
