--- a/ka-spring/pom.xml
+++ b/ka-spring/pom.xml
@@ -41,9 +41,34 @@
 			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jms</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+    		<groupId>javax.jms</groupId>
+    		<artifactId>jms</artifactId>
+    		<version>1.1</version>
+		</dependency>
+		<dependency>
     		<groupId>com.sun.xml.bind</groupId>
     		<artifactId>jaxb-xjc</artifactId>
     		<version>2.2.1</version>
+		</dependency>
+		<dependency>
+    		<groupId>com.caucho</groupId>
+    		<artifactId>hessian</artifactId>
+    		<version>4.0.7</version>
+		</dependency>
+		<dependency>
+    		<groupId>com.sun.xml.fastinfoset</groupId>
+    		<artifactId>FastInfoset</artifactId>
+    		<version>1.2.12</version>
+		</dependency> 
+		<dependency>
+    		<groupId>org.codehaus.jackson</groupId>
+    		<artifactId>jackson-mapper-asl</artifactId>
+    		<version>1.8.5</version>
 		</dependency>
 		<!-- Test  dependencies -->
 		<dependency>
