Fixed POM issues reported by maven release:prepare.

--- a/ka-event-osgi/pom.xml
+++ b/ka-event-osgi/pom.xml
@@ -31,6 +31,7 @@
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
+				<version>2.3.5</version>
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
@@ -81,7 +82,7 @@
 							org.kasource.commons.util								
 						</Private-Package>
 						<Bundle-Activator>org.kasource.kaevent.osgi.Activator</Bundle-Activator>
-						<Bundle-SymbolicName>${pom.artifactId}</Bundle-SymbolicName>
+						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Export-Service>org.kasource.kaplugin.OsgiPluginManager</Export-Service>		
 					</instructions>
 				</configuration>
