--- a/ka-event-core/pom.xml
+++ b/ka-event-core/pom.xml
@@ -115,6 +115,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				 <version>2.8</version>
 				<configuration>
 					<excludePackageNames>org.kasource.kaevent.example.*</excludePackageNames>
 				</configuration>
