--- a/pom.xml
+++ b/pom.xml
@@ -187,12 +187,9 @@
       <build>
         <plugins>
         <plugin>
+        	<groupId>org.apache.maven.plugins</groupId>
         	<artifactId>maven-release-plugin</artifactId>
-        	<configuration>
-          		<tagBase>
-            		scm:svn:https://svn.kenai.com/svn/ka-event~src/tags
-          		</tagBase>
-        	</configuration>
+        	<version>2.0-beta-9</version>
           </plugin>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
