KA_EVENT-39: Fixed typo in POM file.

--- a/ka-event-spring/pom.xml
+++ b/ka-event-spring/pom.xml
@@ -27,7 +27,7 @@
 					<include>**/*.xsd</include>
 					<include>**/*.dtd</include>
 					<include>**/spring.handlers</include>
-					<include>**/spring.schema</include>
+					<include>**/spring.schemas</include>
 				</includes>
 			</resource>
 			<resource>
