--- a/ka-event-guice/pom.xml
+++ b/ka-event-guice/pom.xml
@@ -2,14 +2,14 @@
 	<parent>
   	<artifactId>ka-event-base</artifactId>
   	<groupId>org.kasource</groupId>
-  	<version>0.8-SNAPSHOT</version>
+  	<version>0.7.1</version>
   	<relativePath>../pom.xml</relativePath>
     </parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.kasource</groupId>
 	<artifactId>ka-event-guice</artifactId>
 	<packaging>jar</packaging>
-	<version>0.8-SNAPSHOT</version>
+	<version>0.7.1</version>
 	<name>Ka Event Guice</name>
 	<url>http://maven.apache.org</url>
 	<!-- Build properties -->
