[maven-release-plugin] prepare release ka-event-base-0.8

--- a/ka-event-osgi/pom.xml
+++ b/ka-event-osgi/pom.xml
@@ -2,7 +2,7 @@
 	<parent>
 		<artifactId>ka-event-base</artifactId>
 		<groupId>org.kasource</groupId>
-		<version>0.8-SNAPSHOT</version>
+		<version>0.8</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
