--- a/ka-event-spring3/pom.xml
+++ b/ka-event-spring3/pom.xml
@@ -140,7 +140,7 @@
 		<dependency>
 			<groupId>org.springframework.integration</groupId>
 			<artifactId>spring-integration-core</artifactId>
-			<version>1.0.3.RELEASE</version>
+			<version>2.0.1.RELEASE</version>
 		</dependency>
 		<dependency>
     		<groupId>javax.jms</groupId>
@@ -167,6 +167,12 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
+		</dependency>
+		<!-- For @Configuration classes -->
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib</artifactId>
+			<version>2.2.2</version>
 		</dependency>
 		<!-- Test Dependencies -->
 		<dependency>
