--- a/annotations/pom.xml
+++ b/annotations/pom.xml
@@ -2,7 +2,7 @@
 	<parent>
   	<artifactId>ka-event-base</artifactId>
   	<groupId>org.kasource.kaevent</groupId>
-  	<version>0.9-SNAPSHOT</version>
+  	<version>0.9</version>
   	<relativePath>../pom.xml</relativePath>
   </parent>
 	<modelVersion>4.0.0</modelVersion>
